# the-war-tracker-bot

./: .cruft.json  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: deploy-pypi.yml  deploy.yml  test.yml
docs/: Makefile  conf.py  index.rst
docs/_autoapi_templates/: index.rst
docs/locale/uk_UA/LC_MESSAGES/: index.po
docs/locale/uk_UA/LC_MESSAGES/api/: index.po
docs/locale/uk_UA/LC_MESSAGES/api/twtb/: index.po
docs/locale/uk_UA/LC_MESSAGES/pages/: contributing.po
locales/en/LC_MESSAGES/: messages.po
locales/uk/LC_MESSAGES/: messages.po
twtb/: __init__.py  __main__.py  config.py  utils.py
twtb/logic/: __init__.py  abstractions.py  db.py  models.py
twtb/logic/shared/: __init__.py  abstractions.py  db.py  logging.py  message_handler.py  message_sender.py  sentry_config.py
twtb/logic/shared/db/: __init__.py  channels_info.py  sharing_message.py
twtb/logic/telegram/: __init__.py  button_handlers.py  config.py  data.py  message_sender.py  models.py  on_message.py  setup_shared_chat.py  subscribe.py
