[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "the-war-tracker-bot"
description = "The bot that doom-scrolls through the war news for you!"
version = "0.1.0"
license = "BSD3"
authors = ["PerchunPak <the-war-tracker-bot.author@perchun.it>"]
readme = "README.md"
repository = "https://github.com/PerchunPak/the-war-tracker-bot"


[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

# Our dependecies
omegaconf = "~2.3"
loguru = "~0.6"

typing-extensions = "*"
telethon = "~1.28"
redis = "~4.5"
Babel = "~2.12"
sentry-sdk = "^1.19.0"


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.1"
doc8 = "~1.1"
flake8 = "~6"
flake8-docstrings = "~1"
flake8-ensure-ascii = "~1.0"
pydocstyle = ">=4.0.0"
safety = "~2.3"
cruft = "~2.12"
lice = "~0.6"  # for generating template

pre-commit = "~3.2"


[tool.poetry.group.typing.dependencies]
mypy = "~1.1"

types-docutils = "*"
types-mock = "*"
types-pyopenssl = "*"
types-pytz = "*"
types-pyyaml = "*"
types-redis = "*"
types-setuptools = "*"


[tool.poetry.group.tests.dependencies]
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-mock = "~3.10"
pytest-testmon = "~2.0"
pytest-randomly = "~3.12"
Faker = "~18.3"


[tool.poetry.group.docs.dependencies]
sphinx = "~6.1"
sphinx-autodoc-typehints = "~1.22"
sphinx-autoapi = "~2.1"
sphinx-intl = "~2.1"  # only for locales
furo = "*"
m2r2 = "~0.3"
tomli = { version = "~2.0", markers = "python_version < '3.11'" }
packaging = "23.0"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.28"
GitPython = "~3.1"


[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
dumb-init = "~1.2"


[tool.black]
line-length = 120
target-version = ['py38']
